@@ -191,6 +191,8 @@ class opencache():
                 return False
         elif "://" in inpath:
             cachepath = netcache.fetch(inpath,**kwargs)
+        elif inpath.startswith("mailto:"):
+            cachepath = inpath
         elif os.path.exists(inpath):
             cachepath = inpath
         else:
@@ -242,10 +244,11 @@ class opencache():
         else:
             mimetype = ansicat.get_mime(cachepath)
             if mimetype == "mailto":
-                resp = input("Send an email to %s Y/N? " %inpath)
+                mail = inpath[7:]
+                resp = input("Send an email to %s Y/N? " %mail)
                 if resp.strip().lower() in ("y", "yes"):
                     if _HAS_XDGOPEN :
-                        run("xdg-open mailto:%s", parameter=inpath ,direct_output=True)
+                        run("xdg-open mailto:%s", parameter=mail,direct_output=True)
                     else:
                          print("Cannot find a mail client to send mail to %s" %inpath)
                          print("Please install xdg-open (usually from xdg-util package)")
